--- a/css/normalize.css
+++ b/css/normalize.css
@@ -10,7 +10,7 @@
 
  html {
     line-height: 1.15; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    -webkit-text-size-adjust: 100%;
   }
   
   /* Sections
@@ -38,7 +38,6 @@
    */
   
   h1 {
-    font-size: 2em;
     margin: 0.67em 0;
   }
   
