--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,195 @@
+:root {
+    /*Dark Mode*/
+    --bg-dark-color: #1F1F1F;
+    --text-dark-color: #ffffff;
+    /*Light Mode*/
+    --bg-light-color: #fff;
+    --text-light-color: #212529;
+}
+
+[data-theme="light"] {
+    background-color: var(--bg-light-color);
+    color: var(--text-light-color);
+  }
+  
+  [data-theme="light"] #header a {
+    color: var(--text-light-color);
+  }
+  
+  [data-theme="light"] .social a {
+    color: var(--text-light-color);
+  }
+  
+  [data-theme="light"] #main .main-content h1 {
+    color: var(--text-light-color);
+  }
+  [data-theme="light"] #about .about-me h1 {
+      color:var(--text-light-color);
+  }
+  [data-theme="light"] #about .about-me h2 {
+    color:var(--text-light-color);
+}
+  [data-theme="light"] #portfolio .portfolio-heading h1 {
+    color:var(--text-light-color);
+}
+
+
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap');
 
 html {
-    height:100%;
     box-sizing: border-box;
 }
-
 *, *:before, *:after {
     box-sizing: inherit;
 }
-
 body {
-    min-height:100%;
+    font-size: clamp(16px, 2.5vw, 18px);
     background-color: #1F1F1F;
     font-family: 'Montserrat', sans-serif;
 }
-
+h1 {
+	font-size: clamp(1.75rem, 1rem + 5vw, 7.5rem);
+}
+h2 {
+	font-size: clamp(1.5rem, 4vw, 2rem);
+}
+h3 {
+	font-size: clamp(1.2rem, 3.5vw, 1.75rem);
+}
+h4 {
+	font-size: clamp(1.1rem, 3vw, 1.5rem);
+}
+h5 {
+	font-size: clamp(1rem, 2.5vw, 1.2rem);
+}
 /* Navigation*/
-
 #header {
     display:flex;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
     padding:22px 28px;
-    color:white;
+    color: #ffffff;
     position: relative;
     width:100%;
     z-index:5;
-    flex-wrap:wrap;
+    /* flex-wrap:wrap; */
 }
 
 #header a {
-    color:white;
+    color:var(--text-dark-color);
     text-decoration: none;
     padding:0px;
     font-size:24px;
     line-height: 24px;
     font-weight:bolder;
+    display: inline-block;
+    padding-top:10px;
 }
 
 #header .light {
-    background-color:white;
-    color:black;
-    font-size:24px;
+    background-color:var(--bg-dark-color);
+    color:var(--text-dark-color);
+    font-size:14px;
     padding:2px;
+    border:none;
 }
-
 #header .nav {
     position: relative;
     transition: .5s ease-in-out;
     cursor: pointer;
-    display:flex;
+    /* display:flex; */
     margin:0;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    padding-left: 0px;
 }
-
 #header .nav li {
     list-style-type: none;
-    padding:0px 10px;
+    padding: 5px 10px 5px 0px;
 }
-
 #header .nav li a {
     text-decoration: none!important;
 }
 
+.custom-control {
+    position: relative;
+    z-index: 1;
+    min-height: 1.5rem;
+    padding-left: 50px;
+    padding-top: 10px;
+
+}
+.custom-control-label {
+    position: relative;
+    top: .25rem;
+}
+.custom-control-input {
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 1rem;
+    height: 1.25rem;
+    opacity: 0;
+    cursor: pointer;
+}
+.custom-control-input:focus:checked + .custom-control-label::before {
+    color: #fff;
+    border-color: #007bff;
+    background-color: #007bff;
+}
+.custom-control-input:focus~.custom-control-label::before {
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+.custom-switch .custom-control-label::before {
+    left: -2.25rem;
+    width: 1.75rem;
+    pointer-events: all;
+    border-radius: .5rem;
+}
+.custom-control-label::before {
+    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    position: absolute;
+    top: .15rem;
+    left: -1.5rem;
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    pointer-events: none;
+    content: "";
+    background-color: #fff;
+    border: #adb5bd solid 1px;
+}
+.custom-switch .custom-control-label::after {
+    /* top: calc(.25rem + 2px); */
+    left: calc(-2.25rem + 2px);
+    width: calc(1rem - 4px);
+    height: calc(1rem - 4px);
+    /* background-color: #adb5bd; */
+    background-image: url(/img/moon.svg);
+    border-radius: .5rem;
+    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
+    transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
+}
+.custom-control-label::after {
+    position: absolute;
+    top: .25rem;
+    left: -1.5rem;
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    content: "";
+    background: no-repeat 50%/50% 50%;
+}
+.custom-switch .custom-control-input:checked~.custom-control-label::after {
+    background-color: #fff;
+    -webkit-transform: translateX(.75rem);
+    transform: translateX(.75rem);
+}
 /* Main Content*/
 
 .wrapper {
+    /* max-width: 90%; */
+    /* margin:0 auto; */
     position: relative;
     z-index: 2;
     overflow: hidden;
@@ -80,19 +205,16 @@ body {
 
 #main .main-content {
     position: relative;
-    display: table-cell;
-    vertical-align: middle;
+    width: 88%;
+    margin:0 auto;
+    text-align: center;
 }
 
 #main .main-content h1 {
-    padding-left:60px;
     padding-top:120px;
     margin:0px;
     color:white;
-    font-size:108px;
     font-weight: 900;
-    letter-spacing: -4px;
-    line-height: 105px;
 }
 
 .main-content h1 span {
@@ -107,14 +229,10 @@ body {
 }
 
 .social {
-    position: absolute;
+    padding: 40px 0px 0px 5px;
     color:white;
-    right:0;
-    top:71%;
-    transform: rotate(90deg);
-    margin-right: -230px;
-    z-index:6;
     display:flex;
+    justify-content: center;
     align-items: center;
 }
 
@@ -134,11 +252,10 @@ body {
 }
 
 .social a {
-    color:#fff!important;
+    color:#fff;
 }
 
 .social .fab {
-    color:#fff;
     padding:0px 9px;
     -webkit-font-smoothing: antialiased;
 }
@@ -158,8 +275,13 @@ body {
     z-index:1;
     position: relative;
 }
-
+.about-me p {
+    margin:25px 0px;
+}
 .about-me .resume {
+    margin-top:40px;
+}
+.about-me .resume-btn {
     background-color:transparent;
     text-decoration: none;
     color:#EA0026;
@@ -168,9 +290,10 @@ body {
     font-weight: bold;
     transition: all ease-in-out 0.3s;
     font-size:18px;
+    display: inline-block;
 }
 
-.about-me .resume:hover {
+.about-me .resume-btn:hover {
     background-color: #EA0026;
     color:white;
     border:2px solid white;
@@ -179,19 +302,15 @@ body {
 .about-me {
     width:70%;
     margin:0 auto;
-    padding-top:120px;
+    padding-top:80px;
 }
 
 #about .about-me span {
     color:#EA0026;
 }
 
-#about .about-me h1 {
-    font-size:120px;
-}
-
 #about .about-me hr {
-    margin:80px 0px;
+    margin:20px 0px;
     background: #454545!important;
 }
 
@@ -201,17 +320,14 @@ body {
 
 .about-me .technologies {
     color: #878787!important;
-    padding-bottom:10px;
     padding-top:80px;
 }
 
 .logos {
-    height:200px;
     display:flex;
-    width:100%;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-
-
  .logos > .html,.css,.javascript,.jquery,.sass,.webpack {
     height:100%;
     padding:0px 15px;
@@ -237,7 +353,7 @@ body {
 
 #portfolio .portfolio-heading h1 {
  color:white;
- font-size:120px;
+ /* font-size:120px; */
 }
 
 .portfolio-heading  span {
@@ -246,39 +362,51 @@ body {
 
 .portfolio-grid {
     display:grid;
-    width:70%;
+    width:80%;
     margin:0 auto;
     grid-column-gap:15px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr;
     z-index:1;
 }
 
-.portfolio-grid > .tabellarius,.galactic-wizards,.rock-paper-scissors {
+.portfolio-grid > .tabellarius, .njlawyers,.usatechreport, .breaking-bad, .momentum {
     width:100%;
     height:100%;
     position:relative;
 }
-
-.tabellarius:hover .image {
+.momentum:hover .image {
     opacity: 0.3;
 }
-
-.galactic-wizards:hover .image {
-    opacity: 0.3;
+.momentum:hover .title {
+    opacity: 0.9;
 }
-
-.rock-paper-scissors:hover .image {
-    opacity: 0.3;
-  }
-
+.tabellarius:hover .image{
+opacity: 0.3;
+}
 .tabellarius:hover .title {
     opacity: 0.9;
 }
-
-.galactic-wizards:hover .title {
+.breaking-bad:hover .image {
+    opacity: 0.3;
+}
+.breaking-bad:hover .title {
     opacity: 0.9;
 }
-
+.njlawyers:hover .image {
+    opacity: 0.3;
+}
+.usatechreport:hover .image {
+    opacity: 0.3;
+}
+.rock-paper-scissors:hover .image {
+    opacity: 0.3;
+}
+.njlawyers:hover .title {
+    opacity: 0.9;
+}
+.usatechreport:hover .title {
+    opacity: 0.9;
+}
 .rock-paper-scissors:hover .title {
     opacity: 0.9;
   }
@@ -299,7 +427,7 @@ body {
     max-width: 100%;
     opacity: 1;
     transition: .5s ease;
-  backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .title {
@@ -320,11 +448,10 @@ body {
     background-color: #000000;
     color:white;
     display:flex;
-    justify-content: space-around;
-    padding:35px 0px;
+    flex-direction: column;
+    padding:35px 40px;
     border-bottom:6px solid #EA0026;
     z-index:-2;
-    width:100%;
 }
 
 #footer > .foooter-info,.footer-email {
@@ -349,12 +476,42 @@ body {
     color:#EA0026;
     animation: fa-spin 0.3s  linear;
 }
-
+.footer-info h2 {
+    margin-bottom:5px;
+}
+.footer-info p {
+    margin-bottom: 5px;
+}
+.footer-social {
+    margin:10px 0px;
+}
+.footer-email h2 {
+    margin-bottom:5px;
+}
+.footer-email p {
+    margin:5px 0px;
+}
 
 /* Media Queries */
 
-@media (max-width: 822px) {
+@media (min-width: 600px) {
     #header {
-        flex: 1 1 100%
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+    #header .nav {
+        display: flex;
+    }
+    .logos {
+        flex-direction: row;
+    }
+    .portfolio-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    #footer {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
     }
 }
