--- a/css/style.css
+++ b/css/style.css
@@ -1,517 +1,513 @@
 :root {
-    /*Dark Mode*/
-    --bg-dark-color: #1F1F1F;
-    --text-dark-color: #ffffff;
-    /*Light Mode*/
-    --bg-light-color: #fff;
-    --text-light-color: #212529;
+  /*Dark Mode*/
+  --bg-dark-color: #1f1f1f;
+  --text-dark-color: #ffffff;
+  /*Light Mode*/
+  --bg-light-color: #fff;
+  --text-light-color: #212529;
 }
 
 [data-theme="light"] {
-    background-color: var(--bg-light-color);
-    color: var(--text-light-color);
-  }
-  
-  [data-theme="light"] #header a {
-    color: var(--text-light-color);
-  }
-  
-  [data-theme="light"] .social a {
-    color: var(--text-light-color);
-  }
-  
-  [data-theme="light"] #main .main-content h1 {
-    color: var(--text-light-color);
-  }
-  [data-theme="light"] #about .about-me h1 {
-      color:var(--text-light-color);
-  }
-  [data-theme="light"] #about .about-me h2 {
-    color:var(--text-light-color);
-}
-  [data-theme="light"] #portfolio .portfolio-heading h1 {
-    color:var(--text-light-color);
+  background-color: var(--bg-light-color);
+  color: var(--text-light-color);
 }
 
+[data-theme="light"] #header a {
+  color: var(--text-light-color);
+}
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap');
+[data-theme="light"] .social a {
+  color: var(--text-light-color);
+}
+
+[data-theme="light"] #main .main-content h1 {
+  color: var(--text-light-color);
+}
+[data-theme="light"] #about .about-me h1 {
+  color: var(--text-light-color);
+}
+[data-theme="light"] #about .about-me h2 {
+  color: var(--text-light-color);
+}
+[data-theme="light"] #portfolio .portfolio-heading h1 {
+  color: var(--text-light-color);
+}
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap");
 
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 body {
-    font-size: clamp(16px, 2.5vw, 18px);
-    background-color: #1F1F1F;
-    font-family: 'Montserrat', sans-serif;
+  font-size: clamp(16px, 2.5vw, 18px);
+  background-color: #1f1f1f;
+  font-family: "Montserrat", sans-serif;
 }
 h1 {
-	font-size: clamp(1.75rem, 1rem + 5vw, 7.5rem);
+  font-size: clamp(1.75rem, 1rem + 5vw, 7.5rem);
 }
 h2 {
-	font-size: clamp(1.5rem, 4vw, 2rem);
+  font-size: clamp(1.5rem, 4vw, 2rem);
 }
 h3 {
-	font-size: clamp(1.2rem, 3.5vw, 1.75rem);
+  font-size: clamp(1.2rem, 3.5vw, 1.75rem);
 }
 h4 {
-	font-size: clamp(1.1rem, 3vw, 1.5rem);
+  font-size: clamp(1.1rem, 3vw, 1.5rem);
 }
 h5 {
-	font-size: clamp(1rem, 2.5vw, 1.2rem);
+  font-size: clamp(1rem, 2.5vw, 1.2rem);
 }
 /* Navigation*/
 #header {
-    display:flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    padding:22px 28px;
-    color: #ffffff;
-    position: relative;
-    width:100%;
-    z-index:5;
-    /* flex-wrap:wrap; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  padding: 22px 28px;
+  color: #ffffff;
+  position: relative;
+  width: 100%;
+  z-index: 5;
+  /* flex-wrap:wrap; */
 }
 
 #header a {
-    color:var(--text-dark-color);
-    text-decoration: none;
-    padding:0px;
-    font-size:24px;
-    line-height: 24px;
-    font-weight:bolder;
-    display: inline-block;
-    padding-top:10px;
+  color: var(--text-dark-color);
+  text-decoration: none;
+  padding: 0px;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: bolder;
+  display: inline-block;
+  padding-top: 10px;
 }
 
 #header .light {
-    background-color:var(--bg-dark-color);
-    color:var(--text-dark-color);
-    font-size:14px;
-    padding:2px;
-    border:none;
+  background-color: var(--bg-dark-color);
+  color: var(--text-dark-color);
+  font-size: 14px;
+  padding: 2px;
+  border: none;
 }
 #header .nav {
-    position: relative;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-    /* display:flex; */
-    margin:0;
-    /* flex-wrap: wrap; */
-    padding-left: 0px;
+  position: relative;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+  /* display:flex; */
+  margin: 0;
+  /* flex-wrap: wrap; */
+  padding-left: 0px;
 }
 #header .nav li {
-    list-style-type: none;
-    padding: 5px 10px 5px 0px;
+  list-style-type: none;
+  padding: 5px 10px 5px 0px;
 }
 #header .nav li a {
-    text-decoration: none!important;
+  text-decoration: none !important;
 }
 
 .custom-control {
-    position: relative;
-    z-index: 1;
-    min-height: 1.5rem;
-    padding-left: 50px;
-    padding-top: 10px;
-
+  position: relative;
+  z-index: 1;
+  min-height: 1.5rem;
+  padding-left: 50px;
+  padding-top: 10px;
 }
 .custom-control-label {
-    position: relative;
-    top: .25rem;
+  position: relative;
+  top: 0.25rem;
 }
 .custom-control-input {
-    position: absolute;
-    left: 0;
-    z-index: -1;
-    width: 1rem;
-    height: 1.25rem;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  width: 1rem;
+  height: 1.25rem;
+  opacity: 0;
+  cursor: pointer;
 }
 .custom-control-input:focus:checked + .custom-control-label::before {
-    color: #fff;
-    border-color: #007bff;
-    background-color: #007bff;
+  color: #fff;
+  border-color: #007bff;
+  background-color: #007bff;
 }
-.custom-control-input:focus~.custom-control-label::before {
-    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+.custom-control-input:focus ~ .custom-control-label::before {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 .custom-switch .custom-control-label::before {
-    left: -2.25rem;
-    width: 1.75rem;
-    pointer-events: all;
-    border-radius: .5rem;
+  left: -2.25rem;
+  width: 1.75rem;
+  pointer-events: all;
+  border-radius: 0.5rem;
 }
 .custom-control-label::before {
-    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    position: absolute;
-    top: .15rem;
-    left: -1.5rem;
-    display: block;
-    width: 1rem;
-    height: 1rem;
-    pointer-events: none;
-    content: "";
-    background-color: #fff;
-    border: #adb5bd solid 1px;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+  position: absolute;
+  top: 0.15rem;
+  left: -1.5rem;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  content: "";
+  background-color: #fff;
+  border: #adb5bd solid 1px;
 }
 .custom-switch .custom-control-label::after {
-    /* top: calc(.25rem + 2px); */
-    left: calc(-2.25rem + 2px);
-    width: calc(1rem - 4px);
-    height: calc(1rem - 4px);
-    /* background-color: #adb5bd; */
-    background-image: url(/img/moon.svg);
-    border-radius: .5rem;
-    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
-    transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    transition: transform .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-transform .15s ease-in-out;
+  /* top: calc(.25rem + 2px); */
+  left: calc(-2.25rem + 2px);
+  width: calc(1rem - 4px);
+  height: calc(1rem - 4px);
+  /* background-color: #adb5bd; */
+  background-image: url(/img/moon.svg);
+  border-radius: 0.5rem;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+  transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
+    -webkit-transform 0.15s ease-in-out;
 }
 .custom-control-label::after {
-    position: absolute;
-    top: .25rem;
-    left: -1.5rem;
-    display: block;
-    width: 1rem;
-    height: 1rem;
-    content: "";
-    background: no-repeat 50%/50% 50%;
+  position: absolute;
+  top: 0.25rem;
+  left: -1.5rem;
+  display: block;
+  width: 1rem;
+  height: 1rem;
+  content: "";
+  background: no-repeat 50%/50% 50%;
 }
-.custom-switch .custom-control-input:checked~.custom-control-label::after {
-    background-color: #fff;
-    -webkit-transform: translateX(.75rem);
-    transform: translateX(.75rem);
+.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+  background-color: #fff;
+  -webkit-transform: translateX(0.75rem);
+  transform: translateX(0.75rem);
 }
 /* Main Content*/
 
 .wrapper {
-    /* max-width: 90%; */
-    /* margin:0 auto; */
-    position: relative;
-    z-index: 2;
-    overflow: hidden;
-    box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.10);
+  /* max-width: 90%; */
+  /* margin:0 auto; */
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+  box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.1);
 }
 
 #main {
-    height:80vh;
-    position: relative;
-    z-index:1;
-    overflow: hidden;
+  height: 80vh;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
 }
 
 #main .main-content {
-    position: relative;
-    width: 88%;
-    margin:0 auto;
-    text-align: center;
+  position: relative;
+  width: 88%;
+  margin: 0 auto;
+  text-align: center;
 }
 
 #main .main-content h1 {
-    padding-top:120px;
-    margin:0px;
-    color:white;
-    font-weight: 900;
+  padding-top: 120px;
+  margin: 0px;
+  color: white;
+  font-weight: 900;
 }
 
 .main-content h1 span {
-    color:#EA0026;
+  color: #ea0026;
 }
 
 #particles-js {
-    opacity: 0.6;
-    position:absolute;
-    width:100%;
-    z-index:6;
+  opacity: 0.6;
+  position: absolute;
+  width: 100%;
+  z-index: 6;
 }
 
 .social {
-    padding: 40px 0px 0px 5px;
-    color:white;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+  padding: 40px 0px 0px 5px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .social .social-text {
-    transition: all ease 0.3s;
-    font-weight: 600;
-    font-size:14px;
-    padding-right:12px;
-    letter-spacing: 1px;
+  transition: all ease 0.3s;
+  font-weight: 600;
+  font-size: 14px;
+  padding-right: 12px;
+  letter-spacing: 1px;
 }
 
 .social .line {
-    height:1px;
-    width:52px;
-    margin:0px 1px;
-    background-color:#bfbfbf;
+  height: 1px;
+  width: 52px;
+  margin: 0px 1px;
+  background-color: #bfbfbf;
 }
 
 .social a {
-    color:#fff;
+  color: #fff;
 }
 
 .social .fab {
-    padding:0px 9px;
-    -webkit-font-smoothing: antialiased;
+  padding: 0px 9px;
+  -webkit-font-smoothing: antialiased;
 }
 
 .social a .fab:hover {
-    color:#EA0026;
-    transform: rotate(-90deg);
-    transition: all ease 0.3s;
+  color: #ea0026;
+  transform: rotate(-90deg);
+  transition: all ease 0.3s;
 }
 
 /*About Me*/
 
 #about {
-    text-align: center;
-    color:white;
-    padding-bottom:10px;
-    z-index:1;
-    position: relative;
+  text-align: center;
+  color: white;
+  padding-bottom: 10px;
+  z-index: 1;
+  position: relative;
 }
 .about-me p {
-    margin:25px 0px;
+  margin: 25px 0px;
 }
 .about-me .resume {
-    margin-top:40px;
+  margin-top: 40px;
 }
 .about-me .resume-btn {
-    background-color:transparent;
-    text-decoration: none;
-    color:#EA0026;
-    padding:15px 25px;
-    border:2px solid #EA0026;
-    font-weight: bold;
-    transition: all ease-in-out 0.3s;
-    font-size:18px;
-    display: inline-block;
+  background-color: transparent;
+  text-decoration: none;
+  color: #ea0026;
+  padding: 15px 25px;
+  border: 2px solid #ea0026;
+  font-weight: bold;
+  transition: all ease-in-out 0.3s;
+  font-size: 18px;
+  display: inline-block;
 }
 
 .about-me .resume-btn:hover {
-    background-color: #EA0026;
-    color:white;
-    border:2px solid white;
+  background-color: #ea0026;
+  color: white;
+  border: 2px solid white;
 }
 
 .about-me {
-    width:70%;
-    margin:0 auto;
-    padding-top:80px;
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 80px;
 }
 
 #about .about-me span {
-    color:#EA0026;
+  color: #ea0026;
 }
 
 #about .about-me hr {
-    margin:20px 0px;
-    background: #454545!important;
+  margin: 20px 0px;
+  background: #454545 !important;
 }
 
 .about-me h2 {
-    padding-bottom:40px;
+  padding-bottom: 40px;
 }
 
 .about-me .technologies {
-    color: #878787!important;
-    padding-top:80px;
+  color: #878787 !important;
+  padding-top: 80px;
 }
 
 .logos {
-    display:flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
- .logos > .html,.css,.javascript,.jquery,.sass,.webpack {
-    height:100%;
-    padding:0px 15px;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+.logos > .html,
+.css,
+.javascript,
+.jquery,
+.sass,
+.webpack {
+  height: 100%;
+  padding: 0px 15px;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 
 .logos > div:hover {
-    filter:none;
+  filter: none;
 }
 
 .logos figure {
-    height:100%;
-} 
+  height: 100%;
+}
 
 /*Portfolio*/
 
 #portfolio {
-    text-align: center;
-    padding-bottom: 140px;
+  text-align: center;
+  padding-bottom: 140px;
 }
-
 
 #portfolio .portfolio-heading h1 {
- color:white;
- /* font-size:120px; */
+  color: white;
+  /* font-size:120px; */
 }
 
-.portfolio-heading  span {
-    color:#EA0026;
+.portfolio-heading span {
+  color: #ea0026;
 }
 
 .portfolio-grid {
-    display:grid;
-    width:80%;
-    margin:0 auto;
-    grid-column-gap:15px;
-    grid-template-columns: 1fr;
-    z-index:1;
+  display: grid;
+  width: 80%;
+  margin: 0 auto;
+  grid-column-gap: 15px;
+  grid-template-columns: 1fr;
+  z-index: 1;
 }
 
-.portfolio-grid > .tabellarius, .njlawyers,.usatechreport, .breaking-bad, .momentum {
-    width:100%;
-    height:100%;
-    position:relative;
+.portfolio-grid > .portfolio-item {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 .momentum:hover .image {
-    opacity: 0.3;
+  opacity: 0.3;
 }
 .momentum:hover .title {
-    opacity: 0.9;
+  opacity: 0.9;
 }
-.tabellarius:hover .image{
-opacity: 0.3;
+.tabellarius:hover .image {
+  opacity: 0.3;
 }
 .tabellarius:hover .title {
-    opacity: 0.9;
+  opacity: 0.9;
 }
-.breaking-bad:hover .image {
-    opacity: 0.3;
+.architecture:hover .image {
+  opacity: 0.3;
 }
-.breaking-bad:hover .title {
-    opacity: 0.9;
+.architecture:hover .title {
+  opacity: 0.9;
 }
-.njlawyers:hover .image {
-    opacity: 0.3;
+.saas-landing:hover .image {
+  opacity: 0.3;
 }
-.usatechreport:hover .image {
-    opacity: 0.3;
+.saas-landing:hover .title {
+  opacity: 0.9;
 }
-.rock-paper-scissors:hover .image {
-    opacity: 0.3;
-}
-.njlawyers:hover .title {
-    opacity: 0.9;
-}
-.usatechreport:hover .title {
-    opacity: 0.9;
-}
-.rock-paper-scissors:hover .title {
-    opacity: 0.9;
-  }
-
 .text {
-    background-color: #EA0026;
-    color: white;
-    font-size: 14px;
-    padding: 10px 18px;
+  background-color: #ea0026;
+  color: white;
+  font-size: 14px;
+  padding: 10px 18px;
 }
 
 .portfolio-grid a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .portfolio-grid a img {
-    object-fit: cover;
-    max-width: 100%;
-    opacity: 1;
-    transition: .5s ease;
-    backface-visibility: hidden;
+  object-fit: cover;
+  max-width: 100%;
+  opacity: 1;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
 }
 
 .title {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
 
 /* Footer*/
 
 #footer {
-    background-color: #000000;
-    color:white;
-    display:flex;
-    flex-direction: column;
-    padding:35px 40px;
-    border-bottom:6px solid #EA0026;
-    z-index:-2;
+  background-color: #000000;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 35px 40px;
+  border-bottom: 6px solid #ea0026;
+  z-index: -2;
 }
 
-#footer > .foooter-info,.footer-email {
-    display:flex;
-    flex-direction: column;
+#footer > .foooter-info,
+.footer-email {
+  display: flex;
+  flex-direction: column;
 }
 
 #footer .footer-social {
-    display:flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #footer .footer-social a {
-    background-color: white;
-    padding:8px;
-    border-radius:50%;
-    margin:0px 3px;
-    color:black;
+  background-color: white;
+  padding: 8px;
+  border-radius: 50%;
+  margin: 0px 3px;
+  color: black;
 }
 
 #footer .footer-social a i:hover {
-    color:#EA0026;
-    animation: fa-spin 0.3s  linear;
+  color: #ea0026;
+  animation: fa-spin 0.3s linear;
 }
 .footer-info h2 {
-    margin-bottom:5px;
+  margin-bottom: 5px;
 }
 .footer-info p {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 .footer-social {
-    margin:10px 0px;
+  margin: 10px 0px;
 }
 .footer-email h2 {
-    margin-bottom:5px;
+  margin-bottom: 5px;
 }
 .footer-email p {
-    margin:5px 0px;
+  margin: 5px 0px;
 }
 
 /* Media Queries */
 
 @media (min-width: 600px) {
-    #header {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: baseline;
-    }
-    #header .nav {
-        display: flex;
-    }
-    .logos {
-        flex-direction: row;
-    }
-    .portfolio-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-    #footer {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
+  #header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+  #header .nav {
+    display: flex;
+  }
+  .logos {
+    flex-direction: row;
+  }
+  .portfolio-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
