--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ h5 {
   opacity: 0.6;
   position: absolute;
   width: 100%;
-  z-index: 6;
+  /* z-index: 6; */
 }
 
 .social {
@@ -335,7 +335,11 @@ h5 {
 .javascript,
 .jquery,
 .sass,
-.webpack {
+.bootstrap,
+.vite,
+.vue,
+.vuetify,
+.tailwind {
   height: 100%;
   padding: 0px 15px;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
