--- a/css/style.css
+++ b/css/style.css
@@ -384,18 +384,19 @@ h5 {
   height: 100%;
   position: relative;
 }
+.fitness-calc:hover .image {
+  opacity: 0.3;
+}
+.fitness-calc:hover .title {
+  opacity: 0.9;
+}
 .figma-land:hover .image {
   opacity: 0.3;
 }
 .figma-land:hover .title {
   opacity: 0.9;
 }
-.tabellarius:hover .image {
-  opacity: 0.3;
-}
-.tabellarius:hover .title {
-  opacity: 0.9;
-}
+
 .architecture:hover .image {
   opacity: 0.3;
 }
@@ -406,6 +407,12 @@ h5 {
   opacity: 0.3;
 }
 .saas-landing:hover .title {
+  opacity: 0.9;
+}
+.juve-app:hover .image {
+  opacity: 0.3;
+}
+.juve-app:hover .title {
   opacity: 0.9;
 }
 .text {
